bugfix: adds scroll to search list when overflow

--- a/frontend/public/src/layouts/NavigationBar/Search/index.module.scss
+++ b/frontend/public/src/layouts/NavigationBar/Search/index.module.scss
@@ -44,6 +44,16 @@
   z-index: 7;
   border-radius: 0.6rem;
   box-sizing: border-box;
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: globals.$secondary;
+  }
 }
 
 .listItem {
